button clicks change text

--- a/static/pointPoppy.html
+++ b/static/pointPoppy.html
@@ -5,7 +5,6 @@
 
       <script src="jquery-3.2.1.min.js"></script>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-
       <script type="text/javascript">
         // $(document).ready(() => {
         //   $('#Redwood').click(() => {
@@ -43,22 +42,29 @@
           [MAP PLACEHOLDER]
           <img src="map.png" alt="">
           <!-- Placeholder buttons...pretend to click place on map -->
-          <button type="button" class="btn btn-outline-success" id="Redwood">Redwood</button>
-          <button type="button" class="btn btn-outline-success" id="Sequoia">Sequoia</button>
-          <button type="button" class="btn btn-outline-success" id="Joshuatree">Joshua Tree</button>
+          <button type="button" class="btn btn-outline-success" id="Redwood" onclick="changeName('Redwood')">Redwood</button>
+          <button type="button" class="btn btn-outline-success" id="Sequoia" onclick="changeName('Sequoia')">Sequoia</button>
+          <button type="button" class="btn btn-outline-success" id="Joshuatree" onclick="changeName('Joshuatree')">Joshua Tree</button>
         </div>
         <div class="col-sm-6">
-          INFO COLUMN
+          <h4 id="parkName">INFO COLUMN</h4>
         </div>
       </div>
     </div>
-
-
 
 
     <!-- Include jQuery, Popper.js. Bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script>
+      //changes text on button click
+      function changeName(name) {
+        console.log(name);
+        var elem = document.getElementById(name);
+        var txt = elem.textContent;
+        document.getElementById("parkName").innerHTML = txt;
+      }
+    </script>
   </body>
 </html>
