--- a/static/pointPoppy.html
+++ b/static/pointPoppy.html
@@ -40,11 +40,24 @@
       <div class="row">
         <div class="col-sm-6"> <!-- change to one-column (splash screen) later -->
           [MAP PLACEHOLDER]
-          <img src="map.png" alt="">
+          <!-- <img src="map.png" alt=""> -->
           <!-- Placeholder buttons...pretend to click place on map -->
+          <button type="button" class="btn btn-outline-success" id="Alcatraz" onclick="changeName('Alcatraz')">Alcatraz Island</button>
+          <button type="button" class="btn btn-outline-success" id="Cabrillo" onclick="changeName('Cabrillo')">Cabrillo</button>
+          <button type="button" class="btn btn-outline-success" id="CastleMountains" onclick="changeName('CastleMountains')">Castle Mountains</button>
+          <button type="button" class="btn btn-outline-success" id="ChannelIslands" onclick="changeName('ChannelIslands')">Channel Islands</button>
+          <button type="button" class="btn btn-outline-success" id="DeathValley" onclick="changeName('DeathValley')">Death Valley</button>
+          <button type="button" class="btn btn-outline-success" id="JoshuaTree" onclick="changeName('JoshuaTree')">Joshua Tree</button>
+          <button type="button" class="btn btn-outline-success" id="LassenVolcanic" onclick="changeName('LassenVolcanic')">Lassen Volcanic</button>
+          <button type="button" class="btn btn-outline-success" id="Mojave" onclick="changeName('Mojave')">Mojave National Preserve</button>
+          <button type="button" class="btn btn-outline-success" id="MuirWoods" onclick="changeName('MuirWoods')">Muir Woods</button>
+          <button type="button" class="btn btn-outline-success" id="Pinnacles" onclick="changeName('Pinnacles')">Pinnacles</button>
           <button type="button" class="btn btn-outline-success" id="Redwood" onclick="changeName('Redwood')">Redwood</button>
-          <button type="button" class="btn btn-outline-success" id="Sequoia" onclick="changeName('Sequoia')">Sequoia</button>
-          <button type="button" class="btn btn-outline-success" id="Joshuatree" onclick="changeName('Joshuatree')">Joshua Tree</button>
+          <button type="button" class="btn btn-outline-success" id="SantaMonicaMountains" onclick="changeName('SantaMonicaMountains')">Santa Monica Mountains</button>
+          <button type="button" class="btn btn-outline-success" id="Sequoia" onclick="changeName('Sequoia')">Sequoia and Kings Canyon</button>
+          <button type="button" class="btn btn-outline-success" id="Yosemite" onclick="changeName('Yosemite')">Yosemite</button>
+
+
         </div>
         <div class="col-sm-6">
           <h4 id="parkName">INFO COLUMN</h4>
