--- a/static/pointPoppy.html
+++ b/static/pointPoppy.html
@@ -5,26 +5,26 @@
 
       <script src="jquery-3.2.1.min.js"></script>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-      <script type="text/javascript">
-        // $(document).ready(() => {
-        //   $('#Redwood').click(() => {
-        //     const reqURL = 'parks/Redwood';
-        //     console.log('making ajax request');
-        //
-        //     $.ajax({
-        //       url:'parks/',
-        //       type: 'GET',
-        //       dataType: 'json',
-        //       success: (data) => {
-        //         console.log('ajax success');
-        //       }
-        //     });
-        //   });
-        //   $(document).ajaxError(() => { //catch-all
-        //     $('#status').html('Error: unknown ajaxError!');
-        //   });
-        // });
-      </script>
+      <!-- <script type="text/javascript">
+        $(document).ready(() => {
+          $('#Redwood').click(() => {
+            const reqURL = 'parks/Redwood';
+            console.log('making ajax request');
+
+            $.ajax({
+              url:'parks/',
+              type: 'GET',
+              dataType: 'json',
+              success: (data) => {
+                console.log('ajax success');
+              }
+            });
+          });
+          $(document).ajaxError(() => { //catch-all
+            $('#status').html('Error: unknown ajaxError!');
+          });
+        });
+      </script> -->
 
   </head>
   <body>
