ajax trail/photo

--- a/static/index.html
+++ b/static/index.html
@@ -15,19 +15,20 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
   <link href="styles/styles.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <script type="text/javascript" src="pointPoppy.js"></script>
+
 
 </head>
 
 <body>
   <div class="container-fluid">
     <div id="page-holder">
-      <h1 class="display-4">Point Poppy</h1>
+      <img src="pointpoppy.png" width="40%">
+      <!-- <h1 class="display-4">Point Poppy</h1> -->
       <h5>Explore California! Start by selecting a national park.</h5>
       <hr>
 
       <div class="row">
-        <div class="col-sm-8" id="map-holder">
+        <div class="col-sm-6" id="map-holder">
           <h2>Map</h2>
           <div id="map"></div>
 
@@ -52,9 +53,11 @@
           <button type="button" class="btn btn-outline-success parkid" id="Yosemite" onclick="changeName('Yosemite')">Yosemite</button>
 
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <h2 id="parkName">Choose a park!</h2>
           <div id="test"></div>
+          <div id="test2"></div>
+          <img src="#" id="test3" width="50%">
         </div>
       </div>
     </div>
@@ -63,6 +66,8 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="pointPoppy.js"></script>
 
   <script type="text/javascript" src="scripts/resize_map.js"></script>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
