--- a/static/index2.html
+++ b/static/index2.html
@@ -24,7 +24,7 @@
     <div id="page-holder">
       <img src="pointpoppy.png" width="40%">
       <!-- <h1 class="display-4">Point Poppy</h1> -->
-      <h5>Explore California! Start by selecting a national park.</h5>
+      <h5>Explore California! Select a national park.</h5>
       <hr>
 
       <div class="row">
