button -> trails and pics

--- a/static/index2.html
+++ b/static/index2.html
@@ -55,9 +55,10 @@
         </div>
         <div class="col-sm-6">
           <h2 id="parkName">Choose a park!</h2>
-          <div id="test"></div>
-          <div id="test2"></div>
-          <img src="#" id="test3" width="50%">
+          <h5>Trails</h5>
+          <div id="trails"></div>
+          <br> <h5>Gallery</h5>
+          <img src="#" id="parkPic" width="60%">
         </div>
       </div>
     </div>
