small stylistic changes

--- a/static/home-page.html
+++ b/static/home-page.html
@@ -12,7 +12,7 @@
 
     <body>
         <div class="container">
-            <img src="pointpoppy.png" width="40%">
+            <img src="pointpoppy.png" width="40%" class="mt-3">
           <!--   <h1>Point Poppy</h1> -->
             <hr>
         </div>
@@ -23,13 +23,13 @@
             <div class="display-panel image-overlay">
                 <img src="redwood-forest.ngsversion.1462358315267.adapt.1900.1.jpg" alt="trees" class="display-panel">
                 <div class="centered-text">
-                    <h1 class>Welcome to Point Poppy</h1>
-                    <h4 class>Our site's interactive map allows you to explore the possibilites of California's National Parks!</h4>
+                    <h1 class>Welcome to Point Poppy.</h1>
+                    <h4 class>Our interactive map allows you to explore the infinite possibilites of California's National Parks!</h4>
                     
                     <br>
                     
                     <button class="btn btn-success">
-                        <a href="map-page">Take me to the map!</a>
+                        <a href="map-page">Adventure on!</a>
                     </button>
                 </div>
             </div>
