--- a/static/index2.html
+++ b/static/index2.html
@@ -22,7 +22,7 @@
 <body>
   <div class="container-fluid">
     <div id="page-holder">
-      <img src="pointpoppy.png" width="40%">
+      <a href="/"><img src="pointpoppy.png" width="40%" class="mt-3"></a>
       <!-- <h1 class="display-4">Point Poppy</h1> -->
       <h5>Explore California! Select a national park.</h5>
       <hr>
