--- a/static/index2.html
+++ b/static/index2.html
@@ -22,7 +22,7 @@
 <body>
   <div class="container-fluid">
     <div id="page-holder">
-      <a href="/"><img src="pointpoppy.png" width="40%" class="mt-3"></a>
+      <a href="/"><img src="pointpoppy.png" width="30%" class="mt-3"></a>
       <!-- <h1 class="display-4">Point Poppy</h1> -->
       <h5>Explore California! Select a national park.</h5>
       <hr>
@@ -53,14 +53,18 @@
           <button type="button" class="btn btn-outline-success parkid" id="Yosemite" onclick="changeName('Yosemite')">Yosemite</button>
 
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-3">
           <h2 id="parkName">Choose a park!</h2>
           <h5>Trails</h5>
           <div id="trails"></div>
-          <br> <h5>Gallery</h5>
+
+        </div>
+        <div class="col-sm-3">
+          <br>
+          <br>          
+          <h5>Gallery</h5>
           <img src="#" id="parkPic" width="60%">
         </div>
-      </div>
     </div>
   </div>
 
