--- a/static/index2.html
+++ b/static/index2.html
@@ -3,14 +3,10 @@
 
 <head>
   <title>Point Poppy</title>
-
-  <script
-        src="http://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-      <script type="text/javascript">
-        var $j = $.noConflict(true);
-      </script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    var $j = $.noConflict(true);
+  </script>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
   <link href="styles/styles.css" rel="stylesheet" type="text/css" />
@@ -22,7 +18,7 @@
 <body>
   <div class="container-fluid">
     <div id="page-holder">
-      <a href="/"><img src="pointpoppy.png" width="30%" class="mt-3"></a>
+      <a href="/"><img src="pointpoppy.png" width="40%" class="mt-3"></a>
       <!-- <h1 class="display-4">Point Poppy</h1> -->
       <h5>Explore California! Select a national park.</h5>
       <hr>
@@ -32,8 +28,7 @@
           <h2>Map</h2>
           <div id="map"></div>
 
-          <br></br>
-
+          <div class="btn-toolbar">
           <button type="button" class="btn btn-outline-success parkid" id="Redwood" onclick="changeName('Redwood')">Redwood</button>
           <button type="button" class="btn btn-outline-success parkid" id="Sequoia" onclick="changeName('Sequoia')">Sequoia</button>
           <button type="button" class="btn btn-outline-success parkid" id="Joshuatree" onclick="changeName('Joshuatree')">Joshua Tree</button>
@@ -51,41 +46,41 @@
           <button type="button" class="btn btn-outline-success parkid" id="SantaMonicaMountains" onclick="changeName('SantaMonicaMountains')">Santa Monica Mountains</button>
           <button type="button" class="btn btn-outline-success parkid" id="Sequoia" onclick="changeName('Sequoia')">Sequoia and Kings Canyon</button>
           <button type="button" class="btn btn-outline-success parkid" id="Yosemite" onclick="changeName('Yosemite')">Yosemite</button>
+        </div>
 
         </div>
         <div class="col-sm-3">
           <h2 id="parkName">Choose a park!</h2>
           <h5>Trails</h5>
           <div id="trails"></div>
-
         </div>
         <div class="col-sm-3">
           <br>
-          <br>          
+          <br>
           <h5>Gallery</h5>
           <img src="#" id="parkPic" width="60%">
         </div>
+      </div>
     </div>
-  </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-  <script type="text/javascript" src="pointPoppy.js"></script>
+    <script type="text/javascript" src="pointPoppy.js"></script>
 
-  <script type="text/javascript" src="scripts/resize_map.js"></script>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-  <script type="text/javascript" src="scripts/leaflet.js"></script>
-  <script>
-    //changes text on button click
-    function changeName(name) {
-      console.log(name);
-      var elem = document.getElementById(name);
-      var txt = elem.textContent;
-      document.getElementById("parkName").innerHTML = txt;
-    }
-  </script>
+    <script type="text/javascript" src="scripts/resize_map.js"></script>
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+    <script type="text/javascript" src="scripts/leaflet.js"></script>
+    <script>
+      //changes text on button click
+      function changeName(name) {
+        console.log(name);
+        var elem = document.getElementById(name);
+        var txt = elem.textContent;
+        document.getElementById("parkName").innerHTML = txt;
+      }
+    </script>
 </body>
 
 </html>
