--- a/static/index2.html
+++ b/static/index2.html
@@ -18,7 +18,7 @@
 <body>
   <div class="container-fluid">
     <div id="page-holder">
-      <a href="/"><img src="pointpoppy.png" width="40%" class="mt-3"></a>
+      <a href="/"><img src="pointpoppy.png" width="35%" class="mt-3"></a>
       <!-- <h1 class="display-4">Point Poppy</h1> -->
       <h5>Explore California! Select a national park.</h5>
       <hr>
@@ -26,53 +26,63 @@
       <div class="row">
         <div class="col-sm-6" id="map-holder">
           <h2>Map</h2>
-          <div id="map"></div>
+          <div id="map" class="mb-3"></div>
 
+
+          <h5>Most Popular</h5>
+          <div class="btn-toolbar mb-3">
+            <button type="button" class="btn btn-outline-success parkid" id="Redwood" onclick="changeName('Redwood')">Redwood</button>
+            <button type="button" class="btn btn-outline-success parkid" id="Sequoia" onclick="changeName('Sequoia')">Sequoia</button>
+            <button type="button" class="btn btn-outline-success parkid" id="Joshuatree" onclick="changeName('Joshuatree')">Joshua Tree</button>
+            <button type="button" class="btn btn-outline-success parkid" id="DeathValley" onclick="changeName('DeathValley')">Death Valley</button>
+            <button type="button" class="btn btn-outline-success parkid" id="Yosemite" onclick="changeName('Yosemite')">Yosemite</button>
+          </div>
+
+          <h5>Lesser-Known Attractions</h5>
           <div class="btn-toolbar">
-          <button type="button" class="btn btn-outline-success parkid" id="Redwood" onclick="changeName('Redwood')">Redwood</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Sequoia" onclick="changeName('Sequoia')">Sequoia</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Joshuatree" onclick="changeName('Joshuatree')">Joshua Tree</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Alcatraz" onclick="changeName('Alcatraz')">Alcatraz Island</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Cabrillo" onclick="changeName('Cabrillo')">Cabrillo</button>
-          <button type="button" class="btn btn-outline-success parkid" id="CastleMountains" onclick="changeName('CastleMountains')">Castle Mountains</button>
-          <button type="button" class="btn btn-outline-success parkid" id="ChannelIslands" onclick="changeName('ChannelIslands')">Channel Islands</button>
-          <button type="button" class="btn btn-outline-success parkid" id="DeathValley" onclick="changeName('DeathValley')">Death Valley</button>
-          <button type="button" class="btn btn-outline-success parkid" id="JoshuaTree" onclick="changeName('JoshuaTree')">Joshua Tree</button>
-          <button type="button" class="btn btn-outline-success parkid" id="LassenVolcanic" onclick="changeName('LassenVolcanic')">Lassen Volcanic</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Mojave" onclick="changeName('Mojave')">Mojave National Preserve</button>
-          <button type="button" class="btn btn-outline-success parkid" id="MuirWoods" onclick="changeName('MuirWoods')">Muir Woods</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Pinnacles" onclick="changeName('Pinnacles')">Pinnacles</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Redwood" onclick="changeName('Redwood')">Redwood</button>
-          <button type="button" class="btn btn-outline-success parkid" id="SantaMonicaMountains" onclick="changeName('SantaMonicaMountains')">Santa Monica Mountains</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Sequoia" onclick="changeName('Sequoia')">Sequoia and Kings Canyon</button>
-          <button type="button" class="btn btn-outline-success parkid" id="Yosemite" onclick="changeName('Yosemite')">Yosemite</button>
+            <button type="button" class="btn btn-outline-success parkid" id="Alcatraz" onclick="changeName('Alcatraz')">Alcatraz Island</button>
+            <button type="button" class="btn btn-outline-success parkid" id="Cabrillo" onclick="changeName('Cabrillo')">Cabrillo</button>
+            <button type="button" class="btn btn-outline-success parkid" id="CastleMountains" onclick="changeName('CastleMountains')">Castle Mountains</button>
+            <button type="button" class="btn btn-outline-success parkid" id="ChannelIslands" onclick="changeName('ChannelIslands')">Channel Islands</button>
+            <button type="button" class="btn btn-outline-success parkid" id="LassenVolcanic" onclick="changeName('LassenVolcanic')">Lassen Volcanic</button>
+            <button type="button" class="btn btn-outline-success parkid" id="Mojave" onclick="changeName('Mojave')">Mojave National Preserve</button>
+            <button type="button" class="btn btn-outline-success parkid" id="MuirWoods" onclick="changeName('MuirWoods')">Muir Woods</button>
+            <button type="button" class="btn btn-outline-success parkid" id="Pinnacles" onclick="changeName('Pinnacles')">Pinnacles</button>
+            <button type="button" class="btn btn-outline-success parkid" id="SantaMonicaMountains" onclick="changeName('SantaMonicaMountains')">Santa Monica Mountains</button>
+
+          </div>
         </div>
 
-        </div>
-        <div class="col-sm-3">
-          <h2 id="parkName">Choose a park!</h2>
-          <h5>Trails</h5>
-          <div id="trails"></div>
-        </div>
-        <div class="col-sm-3">
-          <br>
-          <br>
-          <h5>Gallery</h5>
-          <img src="#" id="parkPic" width="60%">
+        <div class="col-sm-6">
+         <h2 id="parkName">Choose a park!</h2>
+         <div id="intro"></div>
+         
+         <div class="row mt-3">
+          <div class="col-sm-6">
+            <h5>Trails</h5>
+            <div id="trails"></div>
+          </div>
+          <div class="col-sm-6">
+
+            <h5>Gallery</h5>
+            <div id="pics"></div>
+            <!-- <img src="#" id="parkPic" width="60%"> -->
+          </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="pointPoppy.js"></script>
+  <script type="text/javascript" src="pointPoppy.js"></script>
 
-    <script type="text/javascript" src="scripts/resize_map.js"></script>
-    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-    <script type="text/javascript" src="scripts/leaflet.js"></script>
-    <script>
+  <script type="text/javascript" src="scripts/resize_map.js"></script>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+  <script type="text/javascript" src="scripts/leaflet.js"></script>
+  <script>
       //changes text on button click
       function changeName(name) {
         console.log(name);
@@ -81,6 +91,6 @@
         document.getElementById("parkName").innerHTML = txt;
       }
     </script>
-</body>
+  </body>
 
-</html>
+  </html>
