--- a/static/index2.html
+++ b/static/index2.html
@@ -9,7 +9,7 @@
   </script>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-  <link href="styles/styles.css" rel="stylesheet" type="text/css" />
+  <link href="styles/styles.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
 
@@ -20,7 +20,7 @@
     <div id="page-holder">
       <a href="/"><img src="pointpoppy.png" width="35%" class="mt-3"></a>
       <!-- <h1 class="display-4">Point Poppy</h1> -->
-      <h5>Explore California! Select a national park.</h5>
+      <h5>Explore California! Select a national park from the map or choose from the buttons below.</h5>
       <hr>
 
       <div class="row">
