get trail length/diff

--- a/static/index2.html
+++ b/static/index2.html
@@ -79,9 +79,9 @@
 										</div>
 									</div>
 									<div class="col-sm-7">
-										<p class="mt-2"><b>Choose a trail to view more information.</b></p>
-										<p>Length: <span id="trail_length"></span></p>
-										<p>Difficulty: <span id="trail_diff"></span></p>
+										<p class="mt-2"><b>Trail Information</b></p>
+										<p><b>Length: </b><span id="trail_length"></span></p>
+										<p><b>Difficulty: </b><span id="trail_diff"></span></p>
 									</div>
 								</div>
 							</div>
