backend NPS API

--- a/static/index2.html
+++ b/static/index2.html
@@ -19,7 +19,7 @@
 		<div id="page-holder">
 			<a href="/"><img src="pointpoppy.png" width="35%" class="mt-3"></a>
 			<!-- <h1 class="display-4">Point Poppy</h1> -->
-			<h5 class="ml-5 mt-1"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Trailblazing California since 2018.</i></h5>
+			<h5 class="ml-5 mt-1"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Trailblazing California since 2018.</i></h5>
 
 
 			<div class="row pt-3">
@@ -32,24 +32,24 @@
 					<!-- Location Button bar -->
 					<h5>Most Popular</h5>
 					<div class="btn-toolbar mb-3">
-						<button type="button" class="btn btn-outline-success parkid" id="Redwood" onclick="changeName('Redwood')">Redwood</button>
-						<button type="button" class="btn btn-outline-success parkid" id="Sequoia" onclick="changeName('Sequoia')">Sequoia</button>
-						<button type="button" class="btn btn-outline-success parkid" id="Joshuatree" onclick="changeName('Joshuatree')">Joshua Tree</button>
-						<button type="button" class="btn btn-outline-success parkid" id="DeathValley" onclick="changeName('DeathValley')">Death Valley</button>
-						<button type="button" class="btn btn-outline-success parkid" id="Yosemite" onclick="changeName('Yosemite')">Yosemite</button>
+						<button type="button" class="btn btn-outline-success parkid" id="redw" onclick="changeName('Redwood')">Redwood</button>
+						<button type="button" class="btn btn-outline-success parkid" id="seki" onclick="changeName('Sequoia')">Sequoia</button>
+						<button type="button" class="btn btn-outline-success parkid" id="jotr" onclick="changeName('Joshuatree')">Joshua Tree</button>
+						<button type="button" class="btn btn-outline-success parkid" id="deva" onclick="changeName('DeathValley')">Death Valley</button>
+						<button type="button" class="btn btn-outline-success parkid" id="yose" onclick="changeName('Yosemite')">Yosemite</button>
 					</div>
 
 					<h5>Lesser-Known Attractions</h5>
 					<div class="btn-toolbar">
-						<button type="button" class="btn btn-outline-success parkid" id="Alcatraz" onclick="changeName('Alcatraz')">Alcatraz Island</button>
-						<button type="button" class="btn btn-outline-success parkid" id="Cabrillo" onclick="changeName('Cabrillo')">Cabrillo</button>
-						<button type="button" class="btn btn-outline-success parkid" id="CastleMountains" onclick="changeName('CastleMountains')">Castle Mountains</button>
-						<button type="button" class="btn btn-outline-success parkid" id="ChannelIslands" onclick="changeName('ChannelIslands')">Channel Islands</button>
-						<button type="button" class="btn btn-outline-success parkid" id="LassenVolcanic" onclick="changeName('LassenVolcanic')">Lassen Volcanic</button>
-						<button type="button" class="btn btn-outline-success parkid" id="Mojave" onclick="changeName('Mojave')">Mojave National Preserve</button>
-						<button type="button" class="btn btn-outline-success parkid" id="MuirWoods" onclick="changeName('MuirWoods')">Muir Woods</button>
-						<button type="button" class="btn btn-outline-success parkid" id="Pinnacles" onclick="changeName('Pinnacles')">Pinnacles</button>
-						<button type="button" class="btn btn-outline-success parkid" id="SantaMonicaMountains" onclick="changeName('SantaMonicaMountains')">Santa Monica Mountains</button>
+						<button type="button" class="btn btn-outline-success parkid" id="alca" onclick="changeName('Alcatraz')">Alcatraz Island</button>
+						<button type="button" class="btn btn-outline-success parkid" id="cabr" onclick="changeName('Cabrillo')">Cabrillo</button>
+						<button type="button" class="btn btn-outline-success parkid" id="camo" onclick="changeName('CastleMountains')">Castle Mountains</button>
+						<button type="button" class="btn btn-outline-success parkid" id="chis" onclick="changeName('ChannelIslands')">Channel Islands</button>
+						<button type="button" class="btn btn-outline-success parkid" id="lavo" onclick="changeName('LassenVolcanic')">Lassen Volcanic</button>
+						<button type="button" class="btn btn-outline-success parkid" id="moja" onclick="changeName('Mojave')">Mojave National Preserve</button>
+						<button type="button" class="btn btn-outline-success parkid" id="muwo" onclick="changeName('MuirWoods')">Muir Woods</button>
+						<button type="button" class="btn btn-outline-success parkid" id="pinn" onclick="changeName('Pinnacles')">Pinnacles</button>
+						<button type="button" class="btn btn-outline-success parkid" id="samo" onclick="changeName('SantaMonicaMountains')">Santa Monica Mountains</button>
 
 					</div>
 				</div>
@@ -88,7 +88,7 @@
 									</div>
 								</div>
 
-								<div id="Gallery" class="parkinfo" style="display:none"> <!-- park pics -->
+								<div id="Gallery" class="parkinfo fixed" style="display:none"> <!-- park pics -->
 									<div id="pics" class="mt-2"></div>
 								</div>
 
