--- a/static/index2.html
+++ b/static/index2.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="container-fluid">
 		<div id="page-holder">
-			<a href="/"><img src="pointpoppy.png" width="35%" class="mt-3"></a>
+			<a href="/"><img src="images/pointpoppy.png" width="35%" class="mt-3"></a>
 			<!-- <h1 class="display-4">Point Poppy</h1> -->
 			<h5 class="ml-5 mt-1"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Trailblazing California since 2018.</i></h5>
 
@@ -104,7 +104,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-	<script type="text/javascript" src="pointPoppy.js"></script>
+	<script type="text/javascript" src="scripts/pointPoppy.js"></script>
 
 	<script type="text/javascript" src="scripts/resize_map.js"></script>
 	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
