--- a/static/index2.html
+++ b/static/index2.html
@@ -96,7 +96,7 @@
 									<div id="pics"></div>
 								</div>
 
-								<div id="Weather" class="parkinfo fixed mt-2" style="display:none">
+								<div id="Weather" class="parkinfo mt-2" style="display:none">
 									<div id="weatherInfo"></div>
 								</div>
 
