--- a/static/index2.html
+++ b/static/index2.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Point Poppy</title>
-	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 	<script type="text/javascript">
 		var $j = $.noConflict(true);
