--- a/static/index2.html
+++ b/static/index2.html
@@ -20,17 +20,16 @@
 <body>
 	<div class="container-fluid">
 		<div id="page-holder">
-			<a href="/"><img src="images/pointpoppy.png" width="35%" class="mt-3"></a>
+			<a href="/"><img src="images/pointpoppy.png" width="25%" class="mt-3"></a>
 			<!-- <h1 class="display-4">Point Poppy</h1> -->
-			<h5 class="ml-5 mt-1"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Trailblazing California since 2018.</i></h5>
+			<h6 class="ml-5 mt-1"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Trailblazing California since 2018.</i></h6>
 
 
 			<div class="row pt-3">
 				<div class="col-sm-8" id="map-holder">
 
 					<!-- Leaflet holder -->
-					<!-- <h2>Map</h2> -->
-					<div id="map" class="mb-3"></div>
+					<div id="map" class="mb-2"></div>
 
 					<div class="buttons">
 						<!-- Location Button bar -->
