--- a/static/index2.html
+++ b/static/index2.html
@@ -80,9 +80,9 @@
 									<!-- trail selector -->
 									<div class="row mt-3">
 										<div class="col-sm-7">
-											<div class="form-group mt-1">
+											<div class="form-group mt-1 mb-0">
 												<label for="trailSelect"><h5>Select a trail:</h5></label>
-												<select multiple class="form-control" id="trailSelect" onchange="showTrailInfo(value);">
+												<select multiple class="form-control" id="trailSelect" onchange="showTrailInfo(value);" size="10">
 												</select>
 											</div>
 										</div>
