--- a/static/index2.html
+++ b/static/index2.html
@@ -42,7 +42,7 @@
 							<button type="button" class="btn btn-outline-success parkid" id="deva">Death Valley</button>
 							<button type="button" class="btn btn-outline-success parkid" id="yose">Yosemite</button>
 						</div>
-						
+
 						<h5>Lesser-Known Attractions</h5>
 						<div class="btn-toolbar" id="lessknown">
 							<button type="button" class="btn btn-outline-success parkid" id="alca">Alcatraz Island</button>
@@ -96,7 +96,23 @@
 
 								<div id="Gallery" class="parkinfo fixed mt-2" style="display:none">
 									<!-- park pics -->
-									<div id="pics"></div>
+									<div id="pics">
+									</div>
+
+									<div id="carousel" class="carousel slide" data-ride="carousel">
+										<!-- Indicators -->
+										<ol class="carousel-indicators"></ol>
+										<!-- Wrapper for slides -->
+										<div class="carousel-inner"></div>
+										<!-- Controls -->
+										<a class="carousel-control-prev" href="#demo" data-slide="prev">
+											<span class="carousel-control-prev-icon"></span>
+										</a>
+										<a class="carousel-control-next" href="#demo" data-slide="next">
+											<span class="carousel-control-next-icon"></span>
+										</a>
+									</div>
+
 								</div>
 
 								<div id="Weather" class="parkinfo mt-2" style="display:none">
@@ -118,7 +134,6 @@
 	<script type="text/javascript" src="scripts/resize_map.js"></script>
 	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
 	<script type="text/javascript" src="scripts/leaflet.js"></script>
-	
 
 </body>
 
