added image carousel

--- a/static/index2.html
+++ b/static/index2.html
@@ -105,10 +105,10 @@
 										<!-- Wrapper for slides -->
 										<div class="carousel-inner"></div>
 										<!-- Controls -->
-										<a class="carousel-control-prev" href="#demo" data-slide="prev">
+										<a class="carousel-control-prev" href="#carousel" data-slide="prev">
 											<span class="carousel-control-prev-icon"></span>
 										</a>
-										<a class="carousel-control-next" href="#demo" data-slide="next">
+										<a class="carousel-control-next" href="#carousel" data-slide="next">
 											<span class="carousel-control-next-icon"></span>
 										</a>
 									</div>
